- IMPORTANT: renamed @{viewVisible to viewToggle}, @{templateVisible to templateToggle}, @{contentVisible to contentToggle}
- IMPORTANT: renamed config keys

- added: config.version
- added: controller.usage function
- added: framework.run() / alias for framework.init();
- added: new parameter @controller {Controller} to controller.onRequest()

- updated: decrease time expiration for static cache (5 minutes)
- updated: framework.usage()
- updated: binary

- removed: config.httpCache
- removed: config.httpMinify
- removed: config.httpCompress
- removed: detailed parameter from module.usage() function

======= 1.2.1-4

- IMPORTANT: partial.js/picture renamed to partial.js/image

- added: @{css('default.css')}
- added: @{script('default.js')}
- added: @{image('image.jpg', @width {Number}, @height {Number}, @alt {String}, className {String})}
- added: @{favicon('favicon.png')}
- added: @{json(@obj {Object}, @name {String | Optional})}
- added: Number.padLeft(), Number.padRight()  - default char is '0'
- added: @{text()}, @{hidden()}, @{checkbox()}, @{radio()}, @{textarea()}, @{password()}
- added: builders.prepare('schemaName', model); return new object by the schema
- added: markdown - new paragraph // and \\

- updated: htmlEncode, htmlDecode (& = &amp;)
- updated: improvement View engine parser
- updated: @routeJS
- updated: @routeCSS
- updated: @routeImage
- updated: partial.js binary
- updated: String.padLeft(), String.padRight() - default char is ' '
- updated: utils.etag(filename, version)
- updated: utils.async & controller.async (setImmediate)

- renamed: utils.Etag and ETagVersion to: utils.etag() and config.etagVersion

- fixed: static files
- fixed: minify HTML
- fixed: @{if condition} @{endif}
- fixed: problem with empty view
- fixed: etagversion
- fixed: template engine parser (problem with date format)

======= 1.2.1-3

- added: builders.default(schemaName)
- added: utils.noop()
- added: string.count('search text')
- added: string.parseDate()