@@ -100,6 +100,36 @@ exports.request = function(url, method, data, callback, headers, encoding, timeo
 };
 
 /*
+	TRIM string in object
+*/
+exports.trim = function(obj) {
+
+	var type = typeof(obj);
+	
+	if (type === 'string')
+		return obj.trim();
+
+	if (type !== 'object')
+		return obj;
+
+	Object.keys(obj).forEach(function(name) {
+		var val = obj[name];
+		
+		if (typeof(val) === 'object') {
+			exports.trim(val);
+			return;
+		}
+
+		if (typeof(val) !== 'string')
+			return;
+
+		obj[name] = val.trim();
+	});
+
+	return obj;
+};
+
+/*
 	Empty function
 */
 exports.noop = function() {}
