@@ -8,6 +8,7 @@ IN DEVELOPMENT ======= 1.2.1-5
 - added: controller.usage function
 - added: framework.run() / alias for framework.init();
 - added: new parameter @controller {Controller} to controller.onRequest()
+- added: utils.trim();
 
 - updated: decrease time expiration for static cache (5 minutes)
 - updated: framework.usage()
